# fuchsia-monitor

./: BUILD.gn  README.md  ignoreBUILD.ignoregn
backend/: BUILD.gn  fuchsia_monitor_backend.cc
fidl/: BUILD.gn  backend_monitor.fidl
frontend/: BUILD.gn  fuchsia_monitor_frontend.cc
frontend/meta/: fuchsia_monitor_frontend_cpp.cmx
resource_mon/: dart_dependencies.yaml  tmp.txt
resource_mon/fidl/: BUILD.gn  backend_monitor.fidl  backend_monitor.test.fidl
