# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//src/sys/build/components.gni")

group("backend") {
  deps = [ ":fuchsia-monitor-backend-cpp" ]
}

executable("bin") {
  output_name = "fuchsia_monitor_backend_cpp"

  sources = [ "fuchsia_monitor_backend.cc" ]
}

fuchsia_component("component") {
  component_name = "fuchsia-monitor-backend-cpp"
  manifest = "meta/fuchsia_monitor_backend_cpp.cmx"
  deps = [ ":bin" ]
}

fuchsia_package("fuchsia-monitor-backend-cpp") {
  deps = [ ":component" ]
}
